src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section4__test__evaluate@VCV000059587.snap
---
source: src/strucvars/eval/del/section4.rs
expression: evaluator.evaluate(&strucvar)?
---
- l4:
    l4_patho:
      overlaps:
        - overlap: 1
          record:
            release: GRCh37
            chromosome: "17"
            start: 43005866
            stop: 43377096
            reference: ~
            alternative: ~
            inner_start: 43005866
            inner_stop: ~
            outer_start: 43377096
            outer_stop: ~
            variant_type: 0
            vcv: VCV000059587
            reference_assertions:
              - rcv: RCV000053430
                title: "GRCh38/hg38 17q21.31(chr17:44928498-45299730)x1 AND See cases"
                clinical_significance: 0
                review_status: 3

