src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section4__test__evaluate@chr10-51620321-51748701-NFE.snap
---
source: src/strucvars/eval/del/section4.rs
expression: evaluator.evaluate(&strucvar)?
---
- l4:
    l4o:
      suggested_score: 0
      overlaps:
        - overlap: 1
          record:
            exac_cnv:
              chrom: "10"
              start: 51620321
              stop: 51748701
              svType: CNV_TYPE_DEL
              population: POPULATION_NFE
        - overlap: 0.8582318
          record:
            exac_cnv:
              chrom: "10"
              start: 51632845
              stop: 51767839
              svType: CNV_TYPE_DEL
              population: POPULATION_FIN

