src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section4__test__evaluate@gnomAD-SV_v2.1_DEL_1_.snap
---
source: src/strucvars/eval/del/section4.rs
expression: evaluator.evaluate(&strucvar)?
---
- l4:
    l4o:
      suggested_score: -1
      overlaps:
        - overlap: 1
          record:
            gnomad_sv2:
              chrom: "1"
              pos: 21000
              end: 26000
              id: gnomAD-SV_v2.1_DEL_1_1
              filters:
                - FILTER_LOW_CALL_RATE
                - FILTER_UNSTABLE_AF_PCRMINUS
              svType: SV_TYPE_DEL
              alleleCounts:
                - bySex:
                    overall:
                      ac: 138
                      an: 8586
                      af: 0.016073
                      nBiGenos: 4293
                      nHomref: 4155
                      nHet: 138
                      freqHomref: 0.967855
                      freqHet: 0.0321454
                    xx:
                      ac: 68
                      an: 4272
                      af: 0.015918
                      nBiGenos: 2136
                      nHomref: 2068
                      nHet: 68
                      freqHomref: 0.968165
                      freqHet: 0.0318352
                    xy:
                      ac: 69
                      an: 4302
                      af: 0.016039
                      nBiGenos: 2151
                      nHomref: 2082
                      nHet: 69
                      freqHomref: 0.967922
                      freqHet: 0.0320781
                  byPopulation:
                    - population: POPULATION_AFR
                      counts:
                        overall:
                          ac: 27
                          an: 3718
                          af: 0.007262
                          nBiGenos: 1859
                          nHomref: 1832
                          nHet: 27
                          freqHomref: 0.985476
                          freqHet: 0.0145239
                        xx:
                          ac: 11
                          an: 1702
                          af: 0.006463
                          nBiGenos: 851
                          nHomref: 840
                          nHet: 11
                          freqHomref: 0.987074
                          freqHet: 0.012926
                        xy:
                          ac: 16
                          an: 2016
                          af: 0.007937
                          nBiGenos: 1008
                          nHomref: 992
                          nHet: 16
                          freqHomref: 0.984127
                          freqHet: 0.015873
                    - population: POPULATION_AMR
                      counts:
                        overall:
                          ac: 8
                          an: 684
                          af: 0.011696
                          nBiGenos: 342
                          nHomref: 334
                          nHet: 8
                          freqHomref: 0.976608
                          freqHet: 0.0233918
                        xx:
                          ac: 6
                          an: 358
                          af: 0.01676
                          nBiGenos: 179
                          nHomref: 173
                          nHet: 6
                          freqHomref: 0.96648
                          freqHet: 0.0335196
                        xy:
                          ac: 2
                          an: 326
                          af: 0.006135
                          nBiGenos: 163
                          nHomref: 161
                          nHet: 2
                          freqHomref: 0.98773
                          freqHet: 0.0122699
                    - population: POPULATION_EAS
                      counts:
                        overall:
                          ac: 54
                          an: 750
                          af: 0.072
                          nBiGenos: 375
                          nHomref: 321
                          nHet: 54
                          freqHomref: 0.856
                          freqHet: 0.144
                        xx:
                          ac: 25
                          an: 328
                          af: 0.07622
                          nBiGenos: 164
                          nHomref: 139
                          nHet: 25
                          freqHomref: 0.847561
                          freqHet: 0.152439
                        xy:
                          ac: 28
                          an: 418
                          af: 0.066986
                          nBiGenos: 209
                          nHomref: 181
                          nHet: 28
                          freqHomref: 0.866029
                          freqHet: 0.133971
                    - population: POPULATION_EUR
                      counts:
                        overall:
                          ac: 48
                          an: 3346
                          af: 0.014345
                          nBiGenos: 1673
                          nHomref: 1625
                          nHet: 48
                          freqHomref: 0.971309
                          freqHet: 0.028691
                        xx:
                          ac: 26
                          an: 1840
                          af: 0.01413
                          nBiGenos: 920
                          nHomref: 894
                          nHet: 26
                          freqHomref: 0.971739
                          freqHet: 0.0282609
                        xy:
                          ac: 22
                          an: 1498
                          af: 0.014686
                          nBiGenos: 749
                          nHomref: 727
                          nHet: 22
                          freqHomref: 0.970627
                          freqHet: 0.0293725
                    - population: POPULATION_OTHER
                      counts:
                        overall:
                          ac: 1
                          an: 88
                          af: 0.011364
                          nBiGenos: 44
                          nHomref: 43
                          nHet: 1
                          freqHomref: 0.977273
                          freqHet: 0.0227273
                        xx:
                          an: 44
                          nBiGenos: 22
                          nHomref: 22
                          freqHomref: 1
                        xy:
                          ac: 1
                          an: 44
                          af: 0.022727
                          nBiGenos: 22
                          nHomref: 21
                          nHet: 1
                          freqHomref: 0.954545
                          freqHet: 0.0454545
                - cohort: controls
                  bySex:
                    overall:
                      ac: 72
                      an: 4272
                      af: 0.016854
                      nBiGenos: 2136
                      nHomref: 2064
                      nHet: 72
                      freqHomref: 0.966292
                      freqHet: 0.0337079
                    xx:
                      ac: 40
                      an: 2178
                      af: 0.018365
                      nBiGenos: 1089
                      nHomref: 1049
                      nHet: 40
                      freqHomref: 0.963269
                      freqHet: 0.0367309
                    xy:
                      ac: 31
                      an: 2088
                      af: 0.014847
                      nBiGenos: 1044
                      nHomref: 1013
                      nHet: 31
                      freqHomref: 0.970307
                      freqHet: 0.0296935
                  byPopulation:
                    - population: POPULATION_AFR
                      counts:
                        overall:
                          ac: 9
                          an: 1592
                          af: 0.005653
                          nBiGenos: 796
                          nHomref: 787
                          nHet: 9
                          freqHomref: 0.988693
                          freqHet: 0.0113065
                        xx:
                          ac: 6
                          an: 826
                          af: 0.007264
                          nBiGenos: 413
                          nHomref: 407
                          nHet: 6
                          freqHomref: 0.985472
                          freqHet: 0.0145278
                        xy:
                          ac: 3
                          an: 766
                          af: 0.003916
                          nBiGenos: 383
                          nHomref: 380
                          nHet: 3
                          freqHomref: 0.992167
                          freqHet: 0.0078329
                    - population: POPULATION_AMR
                      counts:
                        overall:
                          ac: 4
                          an: 484
                          af: 0.008264
                          nBiGenos: 242
                          nHomref: 238
                          nHet: 4
                          freqHomref: 0.983471
                          freqHet: 0.0165289
                        xx:
                          ac: 3
                          an: 246
                          af: 0.012195
                          nBiGenos: 123
                          nHomref: 120
                          nHet: 3
                          freqHomref: 0.97561
                          freqHet: 0.0243902
                        xy:
                          ac: 1
                          an: 238
                          af: 0.004202
                          nBiGenos: 119
                          nHomref: 118
                          nHet: 1
                          freqHomref: 0.991597
                          freqHet: 0.00840336
                    - population: POPULATION_EAS
                      counts:
                        overall:
                          ac: 39
                          an: 568
                          af: 0.068662
                          nBiGenos: 284
                          nHomref: 245
                          nHet: 39
                          freqHomref: 0.862676
                          freqHet: 0.137324
                        xx:
                          ac: 20
                          an: 268
                          af: 0.074627
                          nBiGenos: 134
                          nHomref: 114
                          nHet: 20
                          freqHomref: 0.850746
                          freqHet: 0.149254
                        xy:
                          ac: 18
                          an: 296
                          af: 0.060811
                          nBiGenos: 148
                          nHomref: 130
                          nHet: 18
                          freqHomref: 0.878378
                          freqHet: 0.121622
                    - population: POPULATION_EUR
                      counts:
                        overall:
                          ac: 20
                          an: 1580
                          af: 0.012658
                          nBiGenos: 790
                          nHomref: 770
                          nHet: 20
                          freqHomref: 0.974684
                          freqHet: 0.0253165
                        xx:
                          ac: 11
                          an: 814
                          af: 0.013514
                          nBiGenos: 407
                          nHomref: 396
                          nHet: 11
                          freqHomref: 0.972973
                          freqHet: 0.027027
                        xy:
                          ac: 9
                          an: 764
                          af: 0.01178
                          nBiGenos: 382
                          nHomref: 373
                          nHet: 9
                          freqHomref: 0.97644
                          freqHet: 0.0235602
                    - population: POPULATION_OTHER
                      counts:
                        overall:
                          an: 48
                          nBiGenos: 24
                          nHomref: 24
                          freqHomref: 1
                        xx:
                          an: 24
                          nBiGenos: 12
                          nHomref: 12
                          freqHomref: 1
                        xy:
                          an: 24
                          nBiGenos: 12
                          nHomref: 12
                          freqHomref: 1
                - cohort: non_neuro
                  bySex:
                    overall:
                      ac: 118
                      an: 6838
                      af: 0.017257
                      nBiGenos: 3419
                      nHomref: 3301
                      nHet: 118
                      freqHomref: 0.965487
                      freqHet: 0.034513
                    xx:
                      ac: 63
                      an: 3640
                      af: 0.017308
                      nBiGenos: 1820
                      nHomref: 1757
                      nHet: 63
                      freqHomref: 0.965385
                      freqHet: 0.0346154
                    xy:
                      ac: 54
                      an: 3186
                      af: 0.016949
                      nBiGenos: 1593
                      nHomref: 1539
                      nHet: 54
                      freqHomref: 0.966102
                      freqHet: 0.0338983
                  byPopulation:
                    - population: POPULATION_AFR
                      counts:
                        overall:
                          ac: 9
                          an: 2032
                          af: 0.004429
                          nBiGenos: 1016
                          nHomref: 1007
                          nHet: 9
                          freqHomref: 0.991142
                          freqHet: 0.00885827
                        xx:
                          ac: 6
                          an: 1100
                          af: 0.005455
                          nBiGenos: 550
                          nHomref: 544
                          nHet: 6
                          freqHomref: 0.989091
                          freqHet: 0.0109091
                        xy:
                          ac: 3
                          an: 932
                          af: 0.003219
                          nBiGenos: 466
                          nHomref: 463
                          nHet: 3
                          freqHomref: 0.993562
                          freqHet: 0.00643777
                    - population: POPULATION_AMR
                      counts:
                        overall:
                          ac: 8
                          an: 684
                          af: 0.011696
                          nBiGenos: 342
                          nHomref: 334
                          nHet: 8
                          freqHomref: 0.976608
                          freqHet: 0.0233918
                        xx:
                          ac: 6
                          an: 358
                          af: 0.01676
                          nBiGenos: 179
                          nHomref: 173
                          nHet: 6
                          freqHomref: 0.96648
                          freqHet: 0.0335196
                        xy:
                          ac: 2
                          an: 326
                          af: 0.006135
                          nBiGenos: 163
                          nHomref: 161
                          nHet: 2
                          freqHomref: 0.98773
                          freqHet: 0.0122699
                    - population: POPULATION_EAS
                      counts:
                        overall:
                          ac: 54
                          an: 750
                          af: 0.072
                          nBiGenos: 375
                          nHomref: 321
                          nHet: 54
                          freqHomref: 0.856
                          freqHet: 0.144
                        xx:
                          ac: 25
                          an: 328
                          af: 0.07622
                          nBiGenos: 164
                          nHomref: 139
                          nHet: 25
                          freqHomref: 0.847561
                          freqHet: 0.152439
                        xy:
                          ac: 28
                          an: 418
                          af: 0.066986
                          nBiGenos: 209
                          nHomref: 181
                          nHet: 28
                          freqHomref: 0.866029
                          freqHet: 0.133971
                    - population: POPULATION_EUR
                      counts:
                        overall:
                          ac: 46
                          an: 3284
                          af: 0.014007
                          nBiGenos: 1642
                          nHomref: 1596
                          nHet: 46
                          freqHomref: 0.971985
                          freqHet: 0.0280146
                        xx:
                          ac: 26
                          an: 1810
                          af: 0.014365
                          nBiGenos: 905
                          nHomref: 879
                          nHet: 26
                          freqHomref: 0.971271
                          freqHet: 0.0287293
                        xy:
                          ac: 20
                          an: 1466
                          af: 0.013643
                          nBiGenos: 733
                          nHomref: 713
                          nHet: 20
                          freqHomref: 0.972715
                          freqHet: 0.0272851
                    - population: POPULATION_OTHER
                      counts:
                        overall:
                          ac: 1
                          an: 88
                          af: 0.011364
                          nBiGenos: 44
                          nHomref: 43
                          nHet: 1
                          freqHomref: 0.977273
                          freqHet: 0.0227273
                        xx:
                          an: 44
                          nBiGenos: 22
                          nHomref: 22
                          freqHomref: 1
                        xy:
                          ac: 1
                          an: 44
                          af: 0.022727
                          nBiGenos: 22
                          nHomref: 21
                          nHet: 1
                          freqHomref: 0.954545
                          freqHet: 0.0454545

