src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section4__test__handle_clinvar_benign@VCV000161054.snap
---
source: src/strucvars/eval/del/section4.rs
expression: "evaluator.handle_clinvar_benign(&sv_interval, &clinvar_records)?"
---
l4:
  l4_n:
    overlaps:
      - overlap: 1
        record:
          release: GRCh37
          chromosome: X
          start: 155231256
          stop: 155251871
          reference: ~
          alternative: ~
          inner_start: 155231256
          inner_stop: ~
          outer_start: 155251871
          outer_stop: ~
          variant_type: 0
          vcv: VCV000161053
          reference_assertions:
            - rcv: RCV000148261
              title: "GRCh38/hg38 Xq28(chrX:156001591-156022206)x1 AND See cases"
              clinical_significance: 4
              review_status: 3
      - overlap: 1
        record:
          release: GRCh37
          chromosome: X
          start: 155231256
          stop: 155251871
          reference: ~
          alternative: ~
          inner_start: 155231256
          inner_stop: ~
          outer_start: 155251871
          outer_stop: ~
          variant_type: 0
          vcv: VCV000161054
          reference_assertions:
            - rcv: RCV000050306
              title: "GRCh38/hg38 Xq28(chrX:156001591-156022206)x0 AND See cases"
              clinical_significance: 4
              review_status: 3
      - overlap: 0.8559684
        record:
          release: GRCh37
          chromosome: X
          start: 155227787
          stop: 155251871
          reference: ~
          alternative: ~
          inner_start: 155227787
          inner_stop: ~
          outer_start: 155251871
          outer_stop: ~
          variant_type: 0
          vcv: VCV000057513
          reference_assertions:
            - rcv: RCV000051224
              title: "GRCh38/hg38 Xq28(chrX:155998122-156022206)x0 AND See cases"
              clinical_significance: 4
              review_status: 3
      - overlap: 0.8559684
        record:
          release: GRCh37
          chromosome: X
          start: 155227787
          stop: 155251871
          reference: ~
          alternative: ~
          inner_start: 155227787
          inner_stop: ~
          outer_start: 155251871
          outer_stop: ~
          variant_type: 0
          vcv: VCV000144127
          reference_assertions:
            - rcv: RCV000051225
              title: "GRCh38/hg38 Xq28(chrX:155998122-156022206)x1 AND See cases"
              clinical_significance: 4
              review_status: 3

