src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section4__test__handle_clinvar_pathogenic@VCV000059587.snap
---
source: src/strucvars/eval/del/section4.rs
expression: "evaluator.handle_clinvar_pathogenic(&sv_interval, &clinvar_records)?"
---
l4:
  l4patho:
    overlaps:
      - overlap: 1
        record:
          release: GRCh37
          chromosome: "17"
          start: 43005866
          stop: 43377096
          innerStart: 43005866
          outerStart: 43377096
          variantType: VARIANT_TYPE_DELETION
          vcv: VCV000059587
          referenceAssertions:
            - rcv: RCV000053430
              title: "GRCh38/hg38 17q21.31(chr17:44928498-45299730)x1 AND See cases"
              clinicalSignificance: CLINICAL_SIGNIFICANCE_PATHOGENIC
              reviewStatus: REVIEW_STATUS_CRITERIA_PROVIDED_SINGLE_SUBMITTER

